# adaptive-concurrency-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.e2e.yaml  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml  version-bump.yaml
envoy/: Dockerfile.envoy  envoy.e2e.yaml  envoy.yaml  upstream-server.py
examples/envoy-gateway/: README.md  backend-traffic-policy.yaml  backend.yaml  extension-policy-http.yaml  extension-policy.yaml  gateway.yaml  httproute.yaml  namespace.yaml
examples/envoy-proxy/: README.md  envoy-dry-run.yaml  envoy.yaml
src/: config.rs  gradient2.rs  host_state.rs  http_context.rs  lib.rs  metrics.rs  root_context.rs  stats.rs
tests/e2e/: run_tests.py
